<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="actionbar_backbtn">Navigate up</string>
    <string name="app_name">LED icon editor</string>
    <string name="caller_add_contact_message">No contacts selected. Tap ADD to add contacts to this LED icon.</string>
    <string name="caller_has_contact_add_contact_message">The current contact is added to this LED icon. Tap ADD to add more contacts.</string>
    <string name="cancel">CANCEL</string>
    <string name="common_add">Add</string>
    <string name="common_apply">Apply</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_continue">Continue</string>
    <string name="common_disable">Disable</string>
    <string name="common_done">Done</string>
    <string name="common_edit">Edit</string>
    <string name="common_enable">Enable</string>
    <string name="common_ok">OK</string>
    <string name="common_remove">Remove</string>
    <string name="common_reset">Reset</string>
    <string name="creation_dlg_text">Save your changes or discard them?</string>
    <string name="creation_dlg_title">Discard changes</string>
    <string name="creation_draw">Draw</string>
    <string name="creation_enlarge">Enlarge</string>
    <string name="creation_erase">Erase</string>
    <string name="creation_redo">Redo</string>
    <string name="creation_reduce">Reduce</string>
    <string name="creation_title">Create LED icon</string>
    <string name="creation_undo">Undo</string>
    <string name="custom_icon_subtitle">"%s's LED icons"</string>
    <string name="des_edit">Edit box</string>
    <string name="des_name">LED icon name</string>
    <string name="des_tap">Double tap to edit.</string>
    <string name="description_create_assing_the_led_icons">Assign the LED icons to your contacts and apps.</string>
    <string name="description_create_noti_the_led_icons">When you get calls or notifications, the icons will show on the LED View Cover.</string>
    <string name="description_create_your_own_led_cover">Use LED icon editor to create your own LED View Cover icons.</string>
    <string name="discard">DISCARD</string>
    <string name="done">Done</string>
    <string name="done2">DONE</string>
    <string name="drawing_canvas">Drawing canvas</string>
    <string name="dream_copying_software_update_to_ps_ing_sbody_abb">Copying software update to %s...</string>
    <string name="dream_couldnt_copy_software_update_to_ps_tap_here_to_try_again_sbody">"Couldn't copy software update to %s. Tap here to try again."</string>
    <string name="dream_download_and_install_the_latest_version_tap_here_to_start_sbody">Download and install the latest version. Tap here to start.</string>
    <string name="dream_later_button9">Later</string>
    <string name="dream_the_current_apps_are_added_to_this_led_icon_tap_add_to_add_more_apps">The current apps are added to this LED icon. Tap ADD to add more apps.</string>
    <string name="dream_the_current_contacts_are_added_to_this_led_icon_tap_add_to_add_more_contacts">The current contacts are added to this LED icon. Tap ADD to add more contacts.</string>
    <string name="dream_the_update_will_take_about_pd_minutes_you_wont_be_able_to_use_your_led_cover_while_the_software_is_being_updated">"The update will take about %d minutes. You won't be able to use your LED cover while the software is being updated."</string>
    <string name="dream_update_led_cover_software_q_pheader">Update LED cover software?</string>
    <string name="edit_icon_title">Select icons</string>
    <string name="edit_text_error">Up to %d characters allowed.</string>
    <string name="edit_text_title">LED icon name</string>
    <string name="icon_modify">Modified icon saved as ‘%s’.</string>
    <string name="icon_save">New LED icon ‘%s’ created.</string>
    <string name="led_caller_icons">LED caller icons</string>
    <string name="led_caller_icons_desc">Show an image on the LED View Cover when voice calls are received. A different image can be set for each contact.</string>
    <string name="led_notification_icons">LED notification icons</string>
    <string name="led_notification_icons_desc">Show an image on the LED View Cover when app notifications are received. A different image can be set for each app.</string>
    <string name="ledcover_preset_apple">Apple</string>
    <string name="ledcover_preset_bear">Bear</string>
    <string name="ledcover_preset_bird">Bird</string>
    <string name="ledcover_preset_blinking">Blinking</string>
    <string name="ledcover_preset_boy">Boy</string>
    <string name="ledcover_preset_butterfly">Butterfly</string>
    <string name="ledcover_preset_cactus">Cactus</string>
    <string name="ledcover_preset_cake">Cake</string>
    <string name="ledcover_preset_car">Car</string>
    <string name="ledcover_preset_cat">Cat</string>
    <string name="ledcover_preset_chicken">Chicken</string>
    <string name="ledcover_preset_clover">Clover</string>
    <string name="ledcover_preset_coffee">Coffee</string>
    <string name="ledcover_preset_crown">Crown</string>
    <string name="ledcover_preset_decalcomanie">Decalcomania</string>
    <string name="ledcover_preset_dna">DNA</string>
    <string name="ledcover_preset_duck">Duck</string>
    <string name="ledcover_preset_elephant">Elephant</string>
    <string name="ledcover_preset_family">Family</string>
    <string name="ledcover_preset_firework">Firework</string>
    <string name="ledcover_preset_friends">Friends</string>
    <string name="ledcover_preset_gift">Gift</string>
    <string name="ledcover_preset_girl">Girl</string>
    <string name="ledcover_preset_grinding">Grinding</string>
    <string name="ledcover_preset_heart">Heart</string>
    <string name="ledcover_preset_horse">Horse</string>
    <string name="ledcover_preset_house">House</string>
    <string name="ledcover_preset_infinity">Infinity</string>
    <string name="ledcover_preset_jaws">Jaws</string>
    <string name="ledcover_preset_lamp">Lamp</string>
    <string name="ledcover_preset_man">Man</string>
    <string name="ledcover_preset_mood_neutral">Neutral mood</string>
    <string name="ledcover_preset_moon">Moon</string>
    <string name="ledcover_preset_mouse">Mouse</string>
    <string name="ledcover_preset_mushroom">Mushroom</string>
    <string name="ledcover_preset_rabbit">Rabbit</string>
    <string name="ledcover_preset_sea">Sea</string>
    <string name="ledcover_preset_skyscraper">Skyscraper</string>
    <string name="ledcover_preset_sleepy">Sleepy</string>
    <string name="ledcover_preset_smile">Smiley</string>
    <string name="ledcover_preset_snow">Snow</string>
    <string name="ledcover_preset_snowman">Snowman</string>
    <string name="ledcover_preset_sprout">Sprout</string>
    <string name="ledcover_preset_squeeze">Squeeze</string>
    <string name="show_shortcut">Show LED icon editor shortcut</string>
    <string name="show_shortcut_desc">Add LED icon editor shortcut on Home screen.</string>
</resources>