<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/root_list_scroll" android:layout_width="-1" android:layout_height="-1" android:fillViewport="true">
    <LinearLayout android:layout_gravity="800003" android:orientation="1" android:focusable="false" android:layout_width="-1" android:layout_height="-2" android:splitMotionEvents="false"
        <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="@dimen/led_cover_main_view_pager_margin_top" android:layout_marginStart="@dimen/led_cover_main_margin_start_end" android:layout_marginEnd="@dimen/led_cover_main_margin_start_end">
            <com.samsung.android.app.ledcover.app.CustomViewPager android:id="@id/pager" android:layout_width="-1" android:layout_height="-2" />
            <LinearLayout android:gravity="1" android:layout_gravity="1" android:orientation="0" android:id="@id/pager_indicator" android:layout_width="-1" android:layout_height="@dimen/led_cover_main_pager_indicator" /> />
        <LinearLayout android:gravity="10" android:orientation="1" android:id="@id/ll_call_menu" android:background="?unknown_attr_ref: 101030e" android:paddingTop="@dimen/list_text_view_top_bottom_padding" android:paddingBottom="@dimen/list_text_view_top_bottom_padding" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="-1" android:layout_height="-2" android:paddingStart="@dimen/led_cover_main_margin_start_end" android:paddingEnd="@dimen/led_cover_main_margin_start_end">
            <TextView android:textSize="@dimen/list_main_text_size" android:textColor="@color/list_main_text_color" android:ellipsize="3" android:id="@id/tv_call_title" android:focusable="false" android:layout_width="-2" android:layout_height="-2" android:text="@string/led_caller_icons" android:maxLines="1" />
            <TextView android:textSize="@dimen/list_sub_text_size" android:textColor="@color/list_sub_text_color" android:id="@id/tv_call_description" android:layout_width="-2" android:layout_height="-2" android:text="@string/led_caller_icons_desc" />
        </LinearLayout>
        <View android:background="@color/divider_color" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="-2" android:layout_height="@dimen/led_cover_main_divider_view_height" />
        <LinearLayout android:gravity="10" android:orientation="1" android:id="@id/ll_noti_menu" android:background="?unknown_attr_ref: 101030e" android:paddingTop="@dimen/list_text_view_top_bottom_padding" android:paddingBottom="@dimen/list_text_view_top_bottom_padding" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="-1" android:layout_height="-2" android:paddingStart="@dimen/led_cover_main_margin_start_end" android:paddingEnd="@dimen/led_cover_main_margin_start_end">
            <TextView android:textSize="@dimen/list_main_text_size" android:textColor="@color/list_main_text_color" android:ellipsize="3" android:id="@id/tv_noti_title" android:focusable="false" android:layout_width="-2" android:layout_height="-2" android:text="@string/led_notification_icons" android:maxLines="1" />
            <TextView android:textSize="@dimen/list_sub_text_size" android:textColor="@color/list_sub_text_color" android:id="@id/tv_noti_description" android:focusable="false" android:layout_width="-2" android:layout_height="-2" android:text="@string/led_notification_icons_desc" />
        </LinearLayout>
        <View android:background="@color/divider_color" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="-2" android:layout_height="@dimen/led_cover_main_divider_view_height" />
        <LinearLayout android:gravity="1" android:id="@id/ll_shortcut_menu" android:background="?unknown_attr_ref: 101030e" android:paddingTop="@dimen/list_text_view_top_bottom_padding" android:paddingBottom="@dimen/list_text_view_top_bottom_padding" android:focusable="false" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="-1" android:layout_height="-2" android:paddingStart="@dimen/led_cover_main_margin_start_end" android:paddingEnd="@dimen/led_cover_main_margin_start_end"
            <LinearLayout android:orientation="1" android:id="@id/ll_shortcut_text_menu" android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/list_main_text_size" android:textColor="@color/list_main_text_color" android:ellipsize="3" android:id="@id/tv_shortcut_title" android:layout_width="-2" android:layout_height="-2" android:text="@string/show_shortcut" android:maxLines="1" />
                <TextView android:textSize="@dimen/list_sub_text_size" android:textColor="@color/list_sub_text_color" android:id="@id/tv_shortcut_description" android:layout_width="-2" android:layout_height="-2" android:text="@string/show_shortcut_desc" />
            </LinearLayout>
            <Switch android:id="@id/sw_shortcut" android:background="@connectionresult/SUCCESS" android:clickable="false" android:layout_width="-2" android:layout_height="-1" android:layout_marginStart="@dimen/led_cover_main_switch_margin" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
