<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="-1" android:layout_height="-1">
    <ScrollView android:id="@id/pattern_scrollview" android:layout_width="-1" android:layout_height="-1">
        <LinearLayout android:gravity="11" android:orientation="1" android:layout_width="-1" android:layout_height="-1"
            <LinearLayout android:gravity="11" android:id="@id/pattern_topmenu" android:layout_width="-1" android:layout_height="@dimen/custom_layout_menu_layout_height" android:layout_marginTop="@dimen/creation_land_linearlayout_margin_top" android:layout_marginBottom="@dimen/creation_land_linearlayout_margin_bottom">
                <View android:layout_width="@dimen/creation_linearlayout_margin_left_right" android:layout_height="-2" />
                <LinearLayout android:id="@id/pattern_draw_rec" android:background="@connectionresult/SUCCESS" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height"
                    <LinearLayout android:gravity="51" android:orientation="1" android:id="@id/pattern_draw" android:background="?unknown_attr_ref: 101030e" android:focusable="true" android:clickable="true" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height" android:contentDescription="@string/creation_draw" android:splitMotionEvents="true">
                        <ImageView android:id="@id/pattern_draw_btn" android:background="@drawable/led_cover_create_ic_draw" android:layout_width="@dimen/pattern_draw_menu_btn_width" android:layout_height="@dimen/pattern_draw_menu_btn_height" android:layout_marginBottom="5dp" android:backgroundTint="@color/dot_create_menu_nomal" />
                        <TextView android:textSize="@dimen/pattern_draw_menu_txt_size" android:textColor="@color/dot_create_menu_nomal" android:ellipsize="4" android:id="@id/pattern_draw_txt" android:focusable="false" android:layout_width="-2" android:layout_height="@dimen/pattern_draw_menu_txt_height" android:text="@string/creation_draw" android:singleLine="true" android:marqueeRepeatLimit="-1" android:fontFamily="sec-roboto-light" />
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/pattern_erase_rec" android:background="@connectionresult/SUCCESS" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height"
                    <LinearLayout android:gravity="51" android:orientation="1" android:id="@id/pattern_erase" android:background="?unknown_attr_ref: 101030e" android:focusable="true" android:clickable="true" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height" android:contentDescription="@string/creation_erase" android:splitMotionEvents="true">
                        <ImageView android:id="@id/pattern_erase_btn" android:background="@drawable/led_cover_create_ic_erase" android:layout_width="@dimen/pattern_draw_menu_btn_width" android:layout_height="@dimen/pattern_draw_menu_btn_height" android:layout_marginBottom="5dp" android:backgroundTint="@color/dot_create_menu_nomal" />
                        <TextView android:textSize="@dimen/pattern_draw_menu_txt_size" android:textColor="@color/dot_create_menu_nomal" android:ellipsize="4" android:id="@id/pattern_erase_txt" android:focusable="false" android:layout_width="-2" android:layout_height="@dimen/pattern_draw_menu_txt_height" android:text="@string/creation_erase" android:singleLine="true" android:marqueeRepeatLimit="-1" android:fontFamily="sec-roboto-light" />
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/pattern_undo_rec" android:background="@connectionresult/SUCCESS" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height"
                    <LinearLayout android:gravity="51" android:orientation="1" android:id="@id/pattern_undo" android:background="?unknown_attr_ref: 101030e" android:focusable="true" android:clickable="true" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height" android:contentDescription="@string/creation_undo" android:splitMotionEvents="true">
                        <ImageView android:id="@id/pattern_undo_btn" android:background="@drawable/led_cover_create_ic_undo" android:layout_width="@dimen/pattern_draw_menu_btn_width" android:layout_height="@dimen/pattern_draw_menu_btn_height" android:layout_marginBottom="5dp" android:backgroundTint="@color/dot_create_menu_dim" />
                        <TextView android:textSize="@dimen/pattern_draw_menu_txt_size" android:textColor="@color/dot_create_menu_dim" android:ellipsize="4" android:id="@id/pattern_undo_txt" android:focusable="false" android:layout_width="-2" android:layout_height="@dimen/pattern_draw_menu_txt_height" android:text="@string/creation_undo" android:singleLine="true" android:marqueeRepeatLimit="-1" android:fontFamily="sec-roboto-light" />
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/pattern_redo_rec" android:background="@connectionresult/SUCCESS" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height"
                    <LinearLayout android:gravity="51" android:orientation="1" android:id="@id/pattern_redo" android:background="?unknown_attr_ref: 101030e" android:focusable="true" android:clickable="true" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height" android:contentDescription="@string/creation_redo" android:splitMotionEvents="true">
                        <ImageView android:id="@id/pattern_redo_btn" android:background="@drawable/led_cover_create_ic_redo" android:layout_width="@dimen/pattern_draw_menu_btn_width" android:layout_height="@dimen/pattern_draw_menu_btn_height" android:layout_marginBottom="5dp" android:backgroundTint="@color/dot_create_menu_dim" />
                        <TextView android:textSize="@dimen/pattern_draw_menu_txt_size" android:textColor="@color/dot_create_menu_dim" android:ellipsize="4" android:id="@id/pattern_redo_txt" android:focusable="false" android:layout_width="-2" android:layout_height="@dimen/pattern_draw_menu_txt_height" android:text="@string/creation_redo" android:singleLine="true" android:marqueeRepeatLimit="-1" android:fontFamily="sec-roboto-light" />
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/pattern_rotate_rec" android:background="@connectionresult/SUCCESS" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height"
                    <LinearLayout android:gravity="51" android:orientation="1" android:id="@id/pattern_rotate" android:background="?unknown_attr_ref: 101030e" android:focusable="true" android:clickable="true" android:layout_width="@dimen/pattern_draw_menu_layout_width" android:layout_height="@dimen/pattern_draw_menu_layout_height" android:contentDescription="@string/creation_enlarge" android:splitMotionEvents="true">
                        <ImageView android:id="@id/pattern_rotate_btn" android:background="@drawable/led_cover_create_ic_expand" android:layout_width="@dimen/pattern_draw_menu_btn_width" android:layout_height="@dimen/pattern_draw_menu_btn_height" android:layout_marginBottom="5dp" android:backgroundTint="@color/dot_create_menu_nomal" />
                        <TextView android:textSize="@dimen/pattern_draw_menu_txt_size" android:textColor="@color/dot_create_menu_nomal" android:ellipsize="4" android:id="@id/pattern_rotate_txt" android:focusable="false" android:layout_width="-2" android:layout_height="@dimen/pattern_draw_menu_txt_height" android:text="@string/creation_enlarge" android:singleLine="true" android:marqueeRepeatLimit="-1" android:fontFamily="sec-roboto-light" />
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="@dimen/creation_linearlayout_margin_left_right" android:layout_height="-2" />
            </LinearLayout>
            <LinearLayout android:gravity="11" android:layout_gravity="11" android:orientation="0" android:background="@drawable/dot_background_style" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="-1" android:layout_height="-2" android:layout_marginStart="@dimen/custom_draw_pandding_left_right" android:layout_marginEnd="@dimen/custom_draw_pandding_left_right">
                <com.samsung.android.app.ledcover.creationpattern.CustomGridView android:gravity="11" android:layout_gravity="11" android:id="@id/pattern_drawlayout" android:paddingTop="@dimen/custom_layout_padding_bottom" android:paddingBottom="@dimen/custom_layout_padding_top" android:layout_width="-1" android:layout_height="-2" android:listSelector="0x106000d" android:stretchMode="2" android:numColumns="@integer/int_led_array_columns" android:layoutDirection="0" android:paddingStart="@dimen/custom_layout_panding_left_right" android:paddingEnd="@dimen/custom_layout_panding_left_right" />
            </LinearLayout>
            <LinearLayout android:orientation="1" android:id="@id/edit_name" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="13dp" android:paddingStart="18dp" android:paddingEnd="24dp">
                <TextView android:textSize="13sp" android:textColor="@color/dot_create_arrayname_color" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="5dp" android:layout_marginBottom="3dp" android:text="@string/edit_text_title" android:fontFamily="sec-roboto-light" android:paddingStart="6dp" />
                <EditText android:textSize="16sp" android:id="@id/array_name_edit" android:background="@drawable/tw_common_textfield_activated_mtrl_alpha" android:layout_width="-1" android:layout_height="-2" android:singleLine="true" android:inputType="80001" android:privateImeOptions="inputType=PredictionOff" android:imeOptions="6" android:backgroundTint="#51b0d3" />
                <TextView android:textSize="12sp" android:textColor="@color/dot_create_arrayname_error_color" android:id="@id/error_text" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:text="@string/edit_text_error" android:fontFamily="sec-roboto-light" android:paddingStart="6dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
